--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,10 +3,20 @@
 {% block app_content %}
     <h1>Hi, {{ current_user.username }}!</h1>
     {% for project in projects %}
-    <div>
-        {% include "_project_snippet.html" %}
-    </div>
+        <hr>
+        <h3>
+            <p>
+                <a href="{{ url_for('project', project_id = project.id) }}">
+                    <b>{{ project.name }}</b>
+                </a> : {{ project.description }}
+            </p>
+        </h3>
     {% endfor %}
     <hr>
-    <a href="{{ url_for('new_project') }}">New Project</a>
+    <p>
+        <a href="{{ url_for('new_project') }}">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+            New Project
+        </a>
+    </p>
 {% endblock %}
