--- a/app/templates/edit_tasklist.html
+++ b/app/templates/edit_tasklist.html
@@ -7,5 +7,29 @@
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
         </div>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+            Delete Task List
+        </button>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Delete Project</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                Are you sure?
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" onclick='window.location.href="{{ url_for('delete_tasklist', project_id = project_id, tasklist_id = tasklist_id) }}"'>Confirm</button>
+                </div>
+            </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
