Added CRUD for TaskLog, moving Tasks between TaskLists

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,4 +53,6 @@
 {% block scripts %}
     {{ super() }}
     {{ moment.include_moment() }}
+    <!-- Moment Timezone -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.31/moment-timezone-with-data.js" integrity="sha512-ECoTMVFwwVtxjEBRjUMjviUd6hBjwDhBJI0+3W2YDs+ld5rHHUDr59T15gxwEPkGu5XLmkASUSvPgQe/Tpyodg==" crossorigin="anonymous"></script>
 {% endblock %}
