--- a/app/templates/edit_project.html
+++ b/app/templates/edit_project.html
@@ -2,15 +2,17 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Edit Project</h1>
+    <h1>Edit : {{ project_name }}</h1>
     <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
-            Delete Project
-        </button>
+        <form class="col-md-4" method="post">
+            {{ form.hidden_tag() }}
+            {{ wtf.form_field(form.name) }}
+            {{ wtf.form_field(form.description) }}
+            {{ wtf.form_field(form.submit) }}
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                Delete Project
+            </button>
+        </form>
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -30,6 +32,28 @@
                 </div>
             </div>
             </div>
+        </div>
+    </div>
+    <hr>
+    <h3>Task Lists</h3>
+    <div class="row">
+        <div class="col-md-4">
+            {% for tasklist in project.tasklists %}
+                <a href="{{ url_for('edit_tasklist', project_id = project_id, tasklist_id = tasklist.id) }}">
+                    <h5>{{ tasklist.name }}</h5>
+                </a>
+            {% endfor %}
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-4">
+            <p>
+                <a href="{{ url_for('new_tasklist', project_id = project_id) }}">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    New Task List
+                </a>
+            </p>
         </div>
     </div>
 {% endblock %}
