--- a/app/templates/edit_task.html
+++ b/app/templates/edit_task.html
@@ -2,21 +2,35 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Edit Task</h1>
+    <a href="{{ url_for('edit_project', project_id = project_id) }}">
+        <h1>
+            <b>{{ project_name }}</b>
+        </h1>
+    </a>
+    <a href="{{ url_for('edit_tasklist', project_id = project_id, tasklist_id = tasklist_id) }}">
+        <h2>
+            <b>{{ tasklist_name }}</b>
+        </h2>
+    </a>
+    <h3>Edit : {{ task.name }}</h3>
     <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
-            Delete Task
-        </button>
+        <form class="col-md-4" method="post">
+            {{ form.hidden_tag() }}
+            {{ wtf.form_field(form.name) }}
+            {{ wtf.form_field(form.description) }}
+            {{ wtf.form_field(form.is_complete) }}
+            {{ wtf.form_field(form.tasklists) }}
+            {{ wtf.form_field(form.submit) }}
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                Delete Task
+            </button>
+        </form>
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete Project</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Delete Task</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -30,6 +44,29 @@
                 </div>
             </div>
             </div>
+        </div>
+    </div>
+    <hr>
+    <h3>Task Logs</h3>
+    <div class="row">
+        <div class="col-md-4">
+            {% for tasklog in task.durations %}
+                <a href="{{ url_for('edit_tasklog', project_id = project_id, tasklist_id = tasklist_id, task_id = task_id, tasklog_id = tasklog.id) }}">
+                    <h5>{{ tasklog.note }}</h5>
+                    <h5>{{ moment(tasklog.start_time).format('LLL') }} - {{ moment(tasklog.end_time).format('LLL') }}</h5>
+                </a>
+            {% endfor %}
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-4">
+            <p>
+                <a href="{{ url_for('new_tasklog', project_id = project_id, tasklist_id = tasklist_id, task_id = task_id) }}">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    New Task Log
+                </a>
+            </p>
         </div>
     </div>
 {% endblock %}
