--- a/app/templates/edit_tasklist.html
+++ b/app/templates/edit_tasklist.html
@@ -2,21 +2,28 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Edit Task List</h1>
+    <a href="{{ url_for('edit_project', project_id = project_id) }}">
+        <h1>
+            <b>{{ project_name }}</b>
+        </h1>
+    </a>
+    <h2>Edit : {{ tasklist_name }}</h2>
     <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
-        <!-- Button trigger modal -->
-        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
-            Delete Task List
-        </button>
+        <form class="col-md-4" method="post">
+            {{ form.hidden_tag() }}
+            {{ wtf.form_field(form.name) }}
+            {{ wtf.form_field(form.description) }}
+            {{ wtf.form_field(form.submit) }}
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                Delete Task List
+            </button>
+        </form>
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete Project</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Delete Task List</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -30,6 +37,28 @@
                 </div>
             </div>
             </div>
+        </div>
+    </div>
+    <hr>
+    <h3>Tasks</h3>
+    <div class="row">
+        <div class="col-md-4">
+            {% for task in tasklist.tasks %}
+                <a href="{{ url_for('edit_task', project_id = project_id, tasklist_id = tasklist_id, task_id = task.id) }}">
+                    <h5>{{ task.name }}</h5>
+                </a>
+            {% endfor %}
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-4">
+            <p>
+                <a href="{{ url_for('new_task', project_id = project_id, tasklist_id = tasklist_id) }}">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    New Task
+                </a>
+            </p>
         </div>
     </div>
 {% endblock %}
