--- a/app/templates/new_task.html
+++ b/app/templates/new_task.html
@@ -2,7 +2,17 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>New Task</h1>
+    <a href="{{ url_for('edit_project', project_id = project_id) }}">
+        <h1>
+            <b>{{ project_name }}</b>
+        </h1>
+    </a>
+    <a href="{{ url_for('edit_tasklist', project_id = project_id, tasklist_id = tasklist_id) }}">
+        <h2>
+            <b>{{ tasklist_name }}</b>
+        </h2>
+    </a>
+    <h3>New Task</h3>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
