--- a/app/templates/new_tasklist.html
+++ b/app/templates/new_tasklist.html
@@ -2,7 +2,12 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>New Task List</h1>
+    <a href="{{ url_for('edit_project', project_id = project_id) }}">
+        <h1>
+            <b>{{ project_name }}</b>
+        </h1>
+    </a>
+    <h2>New : Task List</h2>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
