--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,7 +7,7 @@
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
             <hr>
-            <a href="{{ url_for('reset_password_request') }}">
+            <a href="{{ url_for('auth.reset_password_request') }}">
                 Forgot Password?
             </a>
         </div>
