--- a/app/templates/main/edit_project.html
+++ b/app/templates/main/edit_project.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" onclick='window.location.href="{{ url_for('delete_project', project_id = project_id) }}"'>Confirm</button>
+                <button type="button" class="btn btn-primary" onclick='window.location.href="{{ url_for('main.delete_project', project_id = project_id) }}"'>Confirm</button>
                 </div>
             </div>
             </div>
@@ -39,7 +39,7 @@
     <div class="row">
         <div class="col-md-4">
             {% for tasklist in project.tasklists %}
-                <a href="{{ url_for('edit_tasklist', project_id = project_id, tasklist_id = tasklist.id) }}">
+                <a href="{{ url_for('main.edit_tasklist', project_id = project_id, tasklist_id = tasklist.id) }}">
                     <h5>{{ tasklist.name }}</h5>
                 </a>
             {% endfor %}
@@ -49,7 +49,7 @@
     <div class="row">
         <div class="col-md-4">
             <p>
-                <a href="{{ url_for('new_tasklist', project_id = project_id) }}">
+                <a href="{{ url_for('main.new_tasklist', project_id = project_id) }}">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                     New Task List
                 </a>
