--- a/app/templates/main/edit_tasklist.html
+++ b/app/templates/main/edit_tasklist.html
@@ -2,27 +2,20 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <a href="{{ url_for('edit_project', project_id = project_id) }}">
+    <a href="{{ url_for('main.edit_project', project_id = project_id) }}">
         <h1>
             <b>{{ project_name }}</b>
         </h1>
     </a>
-    <a href="{{ url_for('edit_tasklist', project_id = project_id, tasklist_id = tasklist_id) }}">
-        <h2>
-            <b>{{ tasklist_name }}</b>
-        </h2>
-    </a>
-    <h3>Edit : {{ task.name }}</h3>
+    <h2>Edit : {{ tasklist_name }}</h2>
     <div class="row">
         <form class="col-md-4" method="post">
             {{ form.hidden_tag() }}
             {{ wtf.form_field(form.name) }}
             {{ wtf.form_field(form.description) }}
-            {{ wtf.form_field(form.is_complete) }}
-            {{ wtf.form_field(form.tasklists) }}
             {{ wtf.form_field(form.submit) }}
             <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
-                Delete Task
+                Delete Task List
             </button>
         </form>
         <!-- Modal -->
@@ -30,7 +23,7 @@
             <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete Task</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Delete Task List</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -40,20 +33,19 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" onclick='window.location.href="{{ url_for('delete_task', project_id = project_id, tasklist_id = tasklist_id, task_id = task_id) }}"'>Confirm</button>
+                <button type="button" class="btn btn-primary" onclick='window.location.href="{{ url_for('main.delete_tasklist', project_id = project_id, tasklist_id = tasklist_id) }}"'>Confirm</button>
                 </div>
             </div>
             </div>
         </div>
     </div>
     <hr>
-    <h3>Task Logs</h3>
+    <h3>Tasks</h3>
     <div class="row">
         <div class="col-md-4">
-            {% for tasklog in task.durations %}
-                <a href="{{ url_for('edit_tasklog', project_id = project_id, tasklist_id = tasklist_id, task_id = task_id, tasklog_id = tasklog.id) }}">
-                    <h5>{{ tasklog.note }}</h5>
-                    <h5>{{ moment(tasklog.start_time).format('LLL') }} - {{ moment(tasklog.end_time).format('LLL') }}</h5>
+            {% for task in tasklist.tasks %}
+                <a href="{{ url_for('main.edit_task', project_id = project_id, tasklist_id = tasklist_id, task_id = task.id) }}">
+                    <h5>{{ task.name }}</h5>
                 </a>
             {% endfor %}
         </div>
@@ -62,9 +54,9 @@
     <div class="row">
         <div class="col-md-4">
             <p>
-                <a href="{{ url_for('new_tasklog', project_id = project_id, tasklist_id = tasklist_id, task_id = task_id) }}">
+                <a href="{{ url_for('main.new_task', project_id = project_id, tasklist_id = tasklist_id) }}">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    New Task Log
+                    New Task
                 </a>
             </p>
         </div>
