--- a/app/templates/main/new_task.html
+++ b/app/templates/main/new_task.html
@@ -2,12 +2,12 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <a href="{{ url_for('edit_project', project_id = project_id) }}">
+    <a href="{{ url_for('main.edit_project', project_id = project_id) }}">
         <h1>
             <b>{{ project_name }}</b>
         </h1>
     </a>
-    <a href="{{ url_for('edit_tasklist', project_id = project_id, tasklist_id = tasklist_id) }}">
+    <a href="{{ url_for('main.edit_tasklist', project_id = project_id, tasklist_id = tasklist_id) }}">
         <h2>
             <b>{{ tasklist_name }}</b>
         </h2>
