--- a/app/templates/main/new_tasklog.html
+++ b/app/templates/main/new_tasklog.html
@@ -7,17 +7,17 @@
 {% endblock %}
 
 {% block app_content %}
-    <a href="{{ url_for('edit_project', project_id = project_id) }}">
+    <a href="{{ url_for('main.edit_project', project_id = project_id) }}">
         <h1>
             <b>{{ project_name }}</b>
         </h1>
     </a>
-    <a href="{{ url_for('edit_tasklist', project_id = project_id, tasklist_id = tasklist_id) }}">
+    <a href="{{ url_for('main.edit_tasklist', project_id = project_id, tasklist_id = tasklist_id) }}">
         <h2>
             <b>{{ tasklist_name }}</b>
         </h2>
     </a>
-    <a href="{{ url_for('edit_task', project_id = project_id, tasklist_id = tasklist_id, task_id = task_id) }}">
+    <a href="{{ url_for('main.edit_task', project_id = project_id, tasklist_id = tasklist_id, task_id = task_id) }}">
         <h3>
             <b>{{ task_name }}</b>
         </h3>
