--- a/app/templates/profile/user.html
+++ b/app/templates/profile/user.html
@@ -13,7 +13,7 @@
                     <p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>
                 {% endif %}
                 {% if user == current_user %}
-                    <button type="button" class="btn btn-primary" onclick='window.location.href="{{ url_for('edit_profile', username = user.username) }}"'>Edit your profile</button>
+                    <button type="button" class="btn btn-primary" onclick='window.location.href="{{ url_for('profile.edit_profile', username = user.username) }}"'>Edit your profile</button>
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
                         Delete Profile
@@ -33,7 +33,7 @@
                             </div>
                             <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                            <button type="button" class="btn btn-primary" onclick='window.location.href="{{ url_for('delete_profile', username = user.username) }}"'>Confirm</button>
+                            <button type="button" class="btn btn-primary" onclick='window.location.href="{{ url_for('profile.delete_profile', username = user.username) }}"'>Confirm</button>
                             </div>
                         </div>
                         </div>
