--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,7 @@
                     <li><a href="{{ url_for('auth.login') }}">Login</a></li>
                     <li><a href="{{ url_for('auth.register') }}">Register</a></li>
                     {% else %}
+                    <li><a href="{{ url_for('visualization.dashboard') }}">Insights</a></li>
                     <li><a href="{{ url_for('profile.user', username = current_user.username) }}">Profile</a></li>
                     <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
                     {% endif %}
