--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 {% extends 'bootstrap/base.html' %}
 
 {% block title %}
-    {% if title %}{{ title }} - ProjectManagementApp{% else %}Welcome to ProjectManagementApp{% endif %}
+    {% if title %}{{ title }} - Kanbanize{% else %}Welcome to Kanbanize{% endif %}
 {% endblock %}
 
 {% block navbar %}
@@ -15,7 +15,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ url_for('main.index') }}">ProjectManagementApp</a>
+                <a class="navbar-brand" href="{{ url_for('main.index') }}">Kanbanize</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
